--- a/src/features/forDesigner/forDesigner.style.css
+++ b/src/features/forDesigner/forDesigner.style.css
@@ -14,19 +14,19 @@
 }
 
 .forDesignerMain p{
-    color: grey;
+    color: white;
     font-weight: 500;
     margin: 0px;
     text-align: center
 }
 
 .forDesignerMain h1{
-    color: #454F5B;
+    color: white;
     font-size: 56px;
 }
 
 .forDesignerBackground{
-    background-image: url("../../assets/forDesginers.png");
+    background-image: url("../../assets/forDesigners1.png");
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
@@ -36,9 +36,23 @@
     justify-content: center;
     align-items: center;
     min-height: 30vh;
+    position: relative;
 }
 
 .forDesignersButton{
     max-width: 250px;
     width: 100%;
+    background-color: #fa541c;
+    color: white;
+}
+
+.overlay{
+    background-color: #111416a1;;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+}
+
+.innerHolder{
+    z-index: 1;
 }
