--- a/src/features/rightBusinessPlan/style/onePlan.style.css
+++ b/src/features/rightBusinessPlan/style/onePlan.style.css
@@ -82,3 +82,9 @@
     margin: 50px;
     padding: 15px;
 }
+
+.currency:before{
+    content: "$";
+    font-size: 22px;
+    vertical-align: top;
+}
