--- a/src/features/flexibileComponents/style/differentButtons.style.css
+++ b/src/features/flexibileComponents/style/differentButtons.style.css
@@ -7,3 +7,9 @@
     align-items: center;
     gap: 20px;
 }
+
+@media screen and (max-width:600px) {
+    .containedButtons{
+        flex-direction: column;
+    }
+}
