--- a/src/features/featureHighlights/featureHighlights.style.css
+++ b/src/features/featureHighlights/featureHighlights.style.css
@@ -45,3 +45,30 @@
     gap: 50px;
     justify-items: center;
 }
+
+@media screen and (max-width: 1450px) {
+    .featureHighlightsMain{
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-between;
+        gap: 50px;
+        padding: 0;
+    }
+    .featureHighlightsLeftSide{
+        padding: 30px 0px;
+    }
+    .featureHighlightsRightSide{
+        max-width: 650px;
+        gap: 35px;
+        padding: 30px 0px;
+    }
+}
+
+@media screen and (max-width:800px) {
+    .featureHighlightsLeftSide{
+        align-items: center;
+    }
+    .featureHighlightsLeftSide h1{
+        text-align: center;
+    }
+}
