--- a/src/features/uIKitView/uIKitView.style.css
+++ b/src/features/uIKitView/uIKitView.style.css
@@ -39,3 +39,10 @@
     font-size: 56px;
     margin: 0px;
 }
+
+@media screen and (max-width: 1000px) {
+    .uIKitMain{
+        max-width: 80%;
+        margin: 0px auto;
+    }
+}
