--- a/src/features/anyQuestions/anyQuestions.style.css
+++ b/src/features/anyQuestions/anyQuestions.style.css
@@ -14,6 +14,7 @@
     align-items: center;
     box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
     padding: 50px 0;
+    text-align: center;
 }
 
 .anyQuestionsMain h1{
