--- a/src/features/featureHighlights/featureHighlights.style.css
+++ b/src/features/featureHighlights/featureHighlights.style.css
@@ -56,6 +56,9 @@
     }
     .featureHighlightsLeftSide{
         padding: 30px 0px;
+        max-width: 800px;
+        justify-content: center;
+        align-items: center;
     }
     .featureHighlightsRightSide{
         max-width: 650px;
@@ -70,5 +73,17 @@
     }
     .featureHighlightsLeftSide h1{
         text-align: center;
+    }
+}
+
+@media screen and (max-width:490px) {
+    .featureHighlightsLeftSide p{
+        width: 80%;
+        text-align: center;
+    }
+    .featureHighlightsRightSide{
+        width: 85%;
+        grid-template-columns: repeat(2, 1fr);
+        padding: 0; 
     }
 }
