--- a/src/features/lastAdvertisemenet/lastAdvertisemenet.style.css
+++ b/src/features/lastAdvertisemenet/lastAdvertisemenet.style.css
@@ -67,3 +67,12 @@
     max-width: 200px;
     width: 100%;
 }
+
+@media screen and (max-width: 600px) {
+    .lastAdvertisementHolder{
+        margin: 0px auto;
+    }
+    .lastAdvertisementOverlay{
+        padding-bottom: 30px;
+    }
+}
