--- a/src/features/faq/faq.style.css
+++ b/src/features/faq/faq.style.css
@@ -25,9 +25,13 @@
     margin-top: 30px;
 }
 
-@media screen and (max-width: 800px) {
+@media screen and (max-width: 600px) {
     .faqMain{
-        width: 90%;
+        width: 95%;
+    }
+    .faqMain h1{
+        font-size: 34px;
     }
 }
+
 
