--- a/src/features/flexibileComponents/flexibileComponents.style.css
+++ b/src/features/flexibileComponents/flexibileComponents.style.css
@@ -134,13 +134,22 @@
 }
 
 @media screen and (max-width: 600px) {
+    .flexibileComponentsHolder{
+        margin: 0px auto;
+    }
+    .flexibileComponentsMain{
+        padding: 30px 0;
+    }
     .usersComponent{
         flex-direction: column;
         gap: 10px;
     }
-}
-
-@media screen and (max-width: 600px) {
+    .flexibileComponentsLeftSide h1{
+        font-size: 34px;
+    }
+    .flexibileComponentsLeftSide p{
+        width: 95%;
+    }
     .sliderComponent{
         flex-direction: column;
     }
@@ -149,6 +158,11 @@
         gap: 10px;
     }
     .cardHolderRightSide{
+        display: flex;
         align-items: center;
+        justify-content: center;
+    }
+    .radioButtonHolder label{
+        flex: none;
     }
 }
