--- a/src/features/homeView/homeView.style.css
+++ b/src/features/homeView/homeView.style.css
@@ -101,9 +101,13 @@
     }
 }
 
-@media screen and (max-width: 360px) {
+@media screen and (max-width: 600px) {
+    .createYourWebTitle{
+        font-size: 34px;
+    }
     .homeViewLeft p{
-        width: 90%;
+        width: 95%;
     }
 }
+
 
